--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.0.4",
-        "doctrine/doctrine-module": "dev-master",
-        "doctrine/doctrine-orm-module": "dev-master"
+        "doctrine/doctrine-module": "0.7.0",
+        "doctrine/doctrine-orm-module": "0.7.0"
     }
 }
